build/log/idf_py_stdout_output_6500
Command: ninja flash
[1/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D D:\Code\ESPIDF\Project_Anh_Sao\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.5.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 D:/Code/ESPIDF/Project_Anh_Sao/build/bootloader/bootloader.bin"
Bootloader binary size 0x5240 bytes. 0x2dc0 bytes (36%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/Wifi/CMakeFiles/__idf_Wifi.dir/Wifi.c.obj
FAILED: esp-idf/Wifi/CMakeFiles/__idf_Wifi.dir/Wifi.c.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Code/ESPIDF/Project_Anh_Sao/build/config -ID:/Code/ESPIDF/Project_Anh_Sao/Wifi/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/config/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/include/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/debug_probe/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/mspi_timing_tuning/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/power_supply/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/port/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/port/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/heap/tlsf -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/esp32s3/register -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/hal/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32s3/include/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/xtensa/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/xtensa/deprecated_include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_wifi/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_wifi/include/local -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_wifi/wifi_apps/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_wifi/wifi_apps/nan_app/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_phy/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_phy/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_netif/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_partition/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_http_server/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/http_parser -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/Code/ESPIDF/Project_Anh_Sao=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.5.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/Wifi/CMakeFiles/__idf_Wifi.dir/Wifi.c.obj -MF esp-idf\Wifi\CMakeFiles\__idf_Wifi.dir\Wifi.c.obj.d -o esp-idf/Wifi/CMakeFiles/__idf_Wifi.dir/Wifi.c.obj -c D:/Code/ESPIDF/Project_Anh_Sao/Wifi/Wifi.c
D:/Code/ESPIDF/Project_Anh_Sao/Wifi/Wifi.c: In function 'wifi_event_handler':
D:/Code/ESPIDF/Project_Anh_Sao/Wifi/Wifi.c:50:20: error: 'smartconfig_start_config_t' has no member named 'type'
   50 |                 cfg.type = SC_TYPE_ESPTOUCH;
      |                    ^
D:/Code/ESPIDF/Project_Anh_Sao/Wifi/Wifi.c: In function 'smartconfig_task':
D:/Code/ESPIDF/Project_Anh_Sao/Wifi/Wifi.c:104:8: error: 'smartconfig_start_config_t' has no member named 'type'
  104 |     cfg.type = SC_TYPE_ESPTOUCH;
      |        ^
ninja: build stopped: subcommand failed.
